# SARA

./: .gitignore  .ninja_deps  .ninja_log  AI_HANDOFF.md  CMakeLists.txt  LICENSE  README.md  agent-control.js  build.ninja  compile_check.bat  debug_stage1.txt  focus.md  githubcodespace.md  imgui.ini  implemention.md  importantdetial.md  readme.md  sara_agent_manifest.rc  search.md  status.md  terminal.md  test_deepseek.sh  test_liveserver.cpp  test_proxy.js  testfile.txt  upgraddoc2.0.md  upgrade.md  workspace_settings.json
Mem Reduct/: memreduct.exe.sig
ai_workers/: parser.py  parser_api.py  parser_router.py  parser_tools.py  test_input.json  test_output.json
ai_workers/cognition/: __init__.py  context_manager.py  executor.py  orchestrator.py  planner.py  reflector.py  tier_router.py  verifier.py
bot/: build_sara.bat  kill_filebrowser.bat  kill_sara.bat  sara_restart.bat  setup_autostart.ps1  start_sara.bat
docs/: cmnd.md  core_agent.md  plugins_and_mcp.md  qa_examples.md  remotedesktop.md  sara_gui.md  search_plugin.md  terminal.md  workspace.md
frontend/lan_dashboard/: app.js  chat.css  chat.js  dashboard.css  dashboard.html  dashboard.js  index.html
plugins/: plugin_api.h
plugins/media/: media_service.cpp  media_service.h  media_types.h
plugins/news_plugin/: go.mod  main.go
plugins/search_plugin/: blocked_domains.json  domains.go  go.mod  main.go  scraper.go  search.go  trusted_domains.json
plugins/spotify/: spotify_commands.cpp  spotify_commands.hpp  spotify_dock.cpp  spotify_dock.hpp  spotify_events.cpp  spotify_events.hpp  spotify_plugin.cpp  spotify_plugin.hpp  spotify_state.cpp  spotify_state.hpp  spotify_ws.cpp  spotify_ws.hpp
remote_runtime/include/: ApiFsController.h  ApiGitController.h  ApiSearchController.h  ApiWorkspaceController.h  CloudflaredManager.h  ConPTYSession.h  FileBrowserManager.h  GitService.h  HttpUtils.h  LiveServer.h  PortDetector.h  TerminalHttpServer.h  TerminalSessionManager.h  TerminalToken.h
remote_runtime/sourcecontrol/: index.html
remote_runtime/src/: ApiFsController.cpp  ApiGitController.cpp  ApiSearchController.cpp  ApiWorkspaceController.cpp  CloudflaredManager.cpp  ConPTYSession.cpp  FileBrowserManager.cpp  GitService.cpp  HttpUtils.cpp  LiveServer.cpp  PortDetector.cpp  TerminalHttpServer.cpp  TerminalSessionManager.cpp  TerminalToken.cpp
remote_runtime/workspace/: index.html
remote_runtime/workspace/css/: base.css  components.css  editor.css  explorer.css  git.css  resizer.css  search.css  settings.css  terminal.css
remote_runtime/workspace/js/: api.js  editor.js  explorer.js  git.js  icons.js  main.js  ports.js  resizer.js  search.js  settings.js  state.js  terminal.js  theme.js  workspace_backup.js
remote_runtime/workspace/themes/: vs-dark.json  vs-light.json
sara_agent/: sara_agent.manifest
sara_agent/include/: AIWorkerLauncher.h  ActionDispatcher.h  ActionValidator.h  AgentInitializer.h  AutomationDock.h  CameraCapture.h  CommandMap.h  ConfigManager.h  DockRouter.h  EventAutomation.h  HotkeyManager.h  IPCServer.h  IntentEngine.h  Logger.h  MediaDock.h  MeshCentralManager.h  MessageHandlers.h  MonitorDock.h  NativeCommandRouter.h  NetworkMonitor.h  PermissionManager.h  PluginManager.h  ProcessMonitor.h  RuntimeState.h  SQLiteStore.h  Scheduler.h  ScreenshotCapture.h  SecurityManager.h  SessionManager.h  SystemDock.h  SystemMonitor.h  TelegramGateway.h  ToolRegistry.h  WebSocketServer.h  WinAPIExecutor.h
sara_agent/include/plugins/mcp/: MCPClient.h  MCPRegistry.h  MCPTransport.h
sara_agent/src/: AIWorkerLauncher.cpp  ActionDispatcher.cpp  ActionValidator.cpp  AgentInitializer.cpp  AutomationDock.cpp  CameraCapture.cpp  CommandMap.cpp  ConfigManager.cpp  DockRouter.cpp  EventAutomation.cpp  HotkeyManager.cpp  IPCServer.cpp  IntentEngine.cpp  Logger.cpp  MediaDock.cpp  MeshCentralManager.cpp  MessageHandlers.cpp  MonitorDock.cpp  NativeCommandRouter.cpp  NetworkMonitor.cpp  PermissionManager.cpp  PluginManager.cpp  ProcessMonitor.cpp  RuntimeState.cpp  SQLiteStore.cpp  Scheduler.cpp  ScreenshotCapture.cpp  SecurityManager.cpp  SessionManager.cpp  SystemDock.cpp  SystemMonitor.cpp  TelegramGateway.cpp  ToolRegistry.cpp  WebSocketServer.cpp  WinAPIExecutor.cpp  main.cpp
sara_agent/src/plugins/mcp/: MCPClient.cpp  MCPRegistry.cpp  MCPTransport.cpp
sara_gui/include/: IPCClient.h
sara_gui/src/: IPCClient.cpp  main.cpp
settings/: cmd_help.json  command_map.json  mcp_servers.json  plugins.json
settings/commands/: apps.json  browser.json  files.json  focus.json  general.json  media.json  network.json  news.json  notifications.json  power.json  processes.json  search.json  system.json  typing.json  utilities.json
